# L2-Clone-Prodject

./: .gitignore  Aisling Copy of 20260515 PRD Template.docx  CHANGELOG.md  GPU_BACKENDS.md  Jimmy and Aisling Copy of 20260515 PRD Template - FILLED.docx  QA-CHECKLIST.md  README.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  TODO.md  analyze_and_fill_prd.py  dump_template.py  generate_prd.py
.github/workflows/: desktop.yml  release.yml
_partner-review/: FINAL_PUSH_GUIDE.md  Wisper_Week2_PRD_FINAL_CORRECTED.md
docs/: Aisling-corrections.md  SLICE-E-F-SCOPE.md  SLICE-H-SCOPE.md  TIER3-SIGNOFF.md  Week2-PRD-STATUS.md
wisper/: README.md  build-gpu.ps1  dev-sycl.ps1  dev.ps1  package.json
wisper/.cargo/: config.toml
wisper/scripts/: _set-cargo-target.ps1  build-release.ps1  download-model.ps1  download-yt-dlp-bundle.ps1  download-yt-dlp-bundle.sh  install-cuda-windows-ci.ps1  patch-vulkan-cmake.ps1  phase1-exit-qa.ps1  seed-burn-in-recording.ps1  smoke-test.ps1  tier3-qa.ps1  ui-burn-in-test.mjs  ui-burn-in-test.ps1  verify-tool-urls.ps1
wisper/src/: App.css  App.tsx  UrlImportRow.tsx  WelcomeGuide.tsx
wisper/src-tauri/: Cargo.toml  tauri.conf.json
wisper/src-tauri/src/: lib.rs  mic.rs
wisper/wisper-core/: Cargo.toml
wisper/wisper-core/src/: compute.rs  error.rs  ffmpeg_tools.rs  lib.rs  managed_binary.rs  model.rs  update.rs
wisper/wisper-core/src/audio/: mod.rs
wisper/wisper-core/src/export/: mod.rs
wisper/wisper-core/src/fetch/: mod.rs
wisper/wisper-core/src/storage/: mod.rs
wisper/wisper-core/src/transcribe/: mod.rs
